<resources>
    <string name="app_name">Homework</string>
    <string name="action_today">Today</string>
    <string name="next_week"><![CDATA[>>]]></string>
    <string name="prev_week"><![CDATA[<<]]></string>
    <string name="change_view">View</string>
    <string name="add_event">Add</string>
    <string name="event_name">event name</string>
    <string name="event_detail">detail</string>
    <string-array name="repeat_list">
        <item>NONE</item>
        <item>DAYLY</item>
        <item>WEEKLY</item>
        <item>MONTHLY(weekday)</item>
        <item>MONTHLY(date)</item>
        <item>YEARLY</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_date">start date</string>
    <string name="start_time">start time</string>
    <string name="end_date">end date</string>
    <string name="end_time">end time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
