<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_prev_week"
        android:title="@string/prev_week"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item android:id="@+id/action_today"
        android:title="@string/action_today"
        android:orderInCategory="2"
        app:showAsAction="always"/>
    <item android:id="@+id/action_next_week"
        android:title="@string/next_week"
        android:orderInCategory="3"
        app:showAsAction="always"/>
    <item android:id="@+id/change_view"
        android:title="@string/change_view"
        android:orderInCategory="5"
        app:showAsAction="always"/>
    <item android:id="@+id/add_event"
        android:title="@string/add_event"
        android:orderInCategory="5"
        app:showAsAction="always"/>
</menu>
