<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/event_name"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/start_date"
            android:text="@string/start_date"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/start_time"
            android:text="@string/start_time"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/end_date"
            android:text="@string/end_date"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/end_time"
            android:text="@string/end_time"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>
    <Spinner
        android:id="@+id/repeat_schedule"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/event_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_detail"/>

</LinearLayout>